# pebble-tens

./: .gitignore  BUILD.md  README.md  package-lock.json  package.json  wscript
python/: README.md  pyproject.toml
python/scripts/: bake_gradients.py  export_headers.py  make_preview.py  quantize_assets.py
python/src/tens/: __init__.py  bake.py  derived.py  export_c.py  export_resources.py  layout.py  palette.py  preview.py  scene.py  state.py
src/c/: derived.c  derived.h  layout.c  layout.h  main.c  palette.h  render.c  render.h  settings.c  settings.h
src/pkjs/: config.js  index.js
tests/python/: test_derived.py  test_scene.py  test_structure.py
